--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Learning Kubernetes 2.3
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
@@ -14,7 +14,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Run a one-line script
+      - name: Hello testing print
         run: echo Hello, world!
 
       - name: Run a multi-line script
