--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Set up QEMU
+        name: Set up QEMU test
         uses: docker/setup-qemu-action@v3
       -
         name: Set up Docker Buildx
