--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,10 @@ on:
   push:
 jobs:
   docker:
-    runs-on: ubuntu-latest
+    runs-on: 
+     group: unnatik
+     labels: kucl22 
+         
     steps:
       -
         name: Set up QEMU test
