--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Docker CI Learning - KUCL
 on:
   push:
 jobs:
-  docker:
+  docker_1:
     runs-on: 
      labels: kucl22 
          
@@ -26,7 +26,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME}}/kucl22:actions
   deploy:
-    needs: docker
+    needs: docker_1
     name: deploy image
     runs-on: ubuntu-latest
 
