--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ on:
   push:
 jobs:
   docker_1:
-    runs-on: 
-     labels: kucl22 
+    runs-on: ubuntu-latest 
+      #labels: kucl22 
          
     steps:
       -
