--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,6 @@ jobs:
       labels: kucl22
     steps:
       - name: create deployment
-        
-        kubectl create deployment githubaction --image=docker.io/httpd
+        run: kubectl create deployment githubaction --image=docker.io/httpd
 
 
